<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        tools:context=".MainActivity">
    <TableLayout
            android:layout_width="395dp"
            android:layout_height="715dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/HomeTableLayout">

        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/FirstNameRow" android:background="@color/lightGrey" android:padding="25dip">
            <TextView android:text="@string/first_name" android:id="@+id/FirstNameView"></TextView>
            <EditText android:text="" android:id="@+id/FirstNameInput"
                      android:layout_width="165dp" android:inputType="textCapWords"/>
        </TableRow>

        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/LastNameRow" android:background="@color/darkGrey" android:padding="25dip">
            <TextView android:text="@string/family_name" android:id="@+id/LastNameView"></TextView>
            <EditText android:text="" android:id="@+id/LastNameInput" android:inputType="textCapWords"
                      android:layout_width="165dp"></EditText>
        </TableRow>

        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/NickNameRow" android:background="@color/lightGrey" android:padding="25dip">
            <TextView android:text="@string/nick_name" android:id="@+id/NickNameView"></TextView>
            <EditText android:text="" android:id="@+id/NickNameInput" android:inputType="textCapWords"
                      android:layout_width="165dp"></EditText>
        </TableRow>

        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/AgeRow" android:background="@color/darkGrey" android:padding="25dip">
            <TextView android:text="@string/age" android:id="@+id/Age"></TextView>
            <EditText android:text="" android:id="@+id/AgeInput" android:inputType="number"
                      android:layout_width="165dp"></EditText>
        </TableRow>

        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/ScoreRow" android:background="@color/darkGrey" android:padding="25dip">
            <TextView android:text="@string/score" android:id="@+id/Score"></TextView>
            <TextView android:text="@string/scorevalue" android:id="@+id/ScoreValue"></TextView>
        </TableRow>

        <TableRow>
            <Button
                    android:text="@string/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="232dp"
                    tools:layout_editor_absoluteX="0dp" android:id="@+id/SignUp"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>